--- a/res/layout/itemdetails.xml
+++ b/res/layout/itemdetails.xml
@@ -1,120 +1,114 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.google.retailAppWithConfig.itemdetails" >
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.google.retailAppWithConfig.itemdetails">
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="center"
+            android:textSize="12pt" />
 
-    <TextView
-        android:id="@+id/title"
-        android:gravity="center"
-        android:textSize="12pt"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        <ImageView
+            android:id="@+id/mainimage"
+            android:layout_width="500dp"
+            android:layout_height="200dp"
+            android:layout_below="@id/title"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="4pt"
+            android:layout_marginTop="3pt" />
 
-    <ImageView
-        android:id="@+id/mainimage"
-        android:layout_below="@id/title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="3pt"
-        android:layout_width="500dp"
-        android:layout_height="200dp"
-        android:layout_marginBottom="4pt"
-        />
+        <Button
+            android:id="@+id/sizeGuide"
+            android:layout_width="40pt"
+            android:layout_height="12pt"
+            android:layout_below="@id/mainimage"
+            android:layout_marginBottom="4pt"
+            android:layout_marginLeft="4pt"
+            android:background="#000000"
+            android:text="Size Guide"
+            android:textColor="#ffffff"
+            android:textSize="7pt" />
 
+        <Button
+            android:id="@+id/videoPreview"
+            android:layout_width="53pt"
+            android:layout_height="12pt"
+            android:layout_below="@id/mainimage"
+            android:layout_marginBottom="4pt"
+            android:layout_marginLeft="4pt"
+            android:layout_toRightOf="@id/sizeGuide"
+            android:background="#000000"
+            android:text="Video Preview"
+            android:textColor="#ffffff"
+            android:textSize="7pt" />
 
-    <Button android:id="@+id/sizeGuide"
-        android:layout_below="@id/mainimage"
-        android:layout_width="40pt"
-        android:layout_height="12pt"
-        android:background="#000000"
-        android:textColor="#ffffff"
-        android:textSize="7pt"
-        android:text="Size Guide"
-        android:layout_marginLeft="4pt"
-        android:layout_marginBottom="4pt"
-        />
+        <Button
+            android:id="@+id/inventoryCount"
+            android:layout_width="wrap_content"
+            android:layout_height="12pt"
+            android:layout_below="@id/mainimage"
+            android:layout_marginBottom="4pt"
+            android:layout_marginLeft="4pt"
+            android:layout_toRightOf="@id/videoPreview"
+            android:background="#ffdf6c31"
+            android:paddingLeft="2pt"
+            android:paddingRight="2pt"
+            android:text="Stock Count"
+            android:textColor="#000000"
+            android:textSize="7pt" />
 
-    <Button android:id="@+id/videoPreview"
-        android:layout_below="@id/mainimage"
-        android:layout_toRightOf="@id/sizeGuide"
-        android:layout_width="53pt"
-        android:layout_height="12pt"
-        android:background="#000000"
-        android:textColor="#ffffff"
-        android:textSize="7pt"
-        android:text="Video Preview"
-        android:layout_marginLeft="4pt"
-        android:layout_marginBottom="4pt"
-        />
+        <TextView
+            android:id="@+id/brand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/sizeGuide"
+            android:layout_marginTop="3pt"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="10pt" />
 
-    <Button android:id="@+id/inventoryCount"
-        android:layout_below="@id/mainimage"
-        android:layout_toRightOf="@id/videoPreview"
-        android:layout_width="wrap_content"
-        android:layout_height="12pt"
-        android:background="#ffdf6c31"
-        android:textColor="#000000"
-        android:textSize="7pt"
-        android:text="Stock Count"
-        android:layout_marginLeft="4pt"
-        android:layout_marginBottom="4pt"
-        android:paddingLeft="2pt"
-        android:paddingRight="2pt"
-        />
+        <TextView
+            android:id="@+id/size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/brand"
+            android:layout_marginTop="3pt"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="10pt" />
 
-    <TextView
-        android:id="@+id/brand"
-        android:layout_below="@id/sizeGuide"
-        android:layout_marginTop="3pt"
-        android:textSize="10pt"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/itemPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/size"
+            android:layout_marginTop="3pt"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="10pt" />
 
-    <TextView
-        android:id="@+id/size"
-        android:layout_below="@id/brand"
-        android:layout_marginTop="3pt"
-        android:textSize="10pt"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/stockForecast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/itemPrice"
+            android:layout_marginTop="3pt"
+            android:fontFamily="sans-serif-condensed"
+            android:paddingLeft="2pt"
+            android:paddingRight="2pt"
+            android:textSize="10pt" />
+    </RelativeLayout>
 
-
-
-    <TextView
-        android:id="@+id/itemPrice"
-        android:layout_below="@id/size"
-        android:layout_marginTop="3pt"
-        android:textSize="10pt"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/stockForecast"
-        android:layout_below="@id/itemPrice"
-        android:layout_marginTop="3pt"
-        android:textSize="10pt"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="2pt"
-        android:paddingRight="2pt"
-        />
-
-</RelativeLayout>
-
-    </ScrollView>
+</ScrollView>
